--- a/package.json
+++ b/package.json
@@ -4,25 +4,28 @@
   "description": "A simple project to show off express, nodejs, docker and mongoDB",
   "main": "server.ts",
   "repository": "git@github.com:aaron-stones/express-mongoose.git",
-  "author": "aaron stones <aaron@smartarewards.com>",
+  "author": "aaron stones <aaron.stones1999@gmail.com>",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
     "start:prod": "node dist/server.js",
-    "test": "jest --coverage",
-    "test:unit": "ENV_FILE=./config/.env.test jest",
+    "test": "ENV_FILE=./.env.test jest --coverage --runInBand",
+    "test:unit": "ENV_FILE=./.env.test jest --runInBand",
     "start:dev": "nodemon ./server.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/mongoose": "^5.11.97",
+    "@types/supertest": "^2.0.12",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.5.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   }
