--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "author": "aaron stones <aaron.stones1999@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "start:prod": "node dist/server.js",
-    "test": "ENV_FILE=./.env.test jest --coverage --runInBand",
-    "test:unit": "ENV_FILE=./.env.test jest --runInBand",
+    "build": "tsc -p .",
+    "start:prod": "ts-node dist/server.js",
+    "test": "ENV_FILE=./.env.test jest --coverage --runInBand --silent",
+    "test:unit": "ENV_FILE=./.env.test jest --runInBand --silent",
     "start:dev": "nodemon ./server.ts"
   },
   "dependencies": {
@@ -18,15 +18,21 @@
     "@types/jest": "^29.5.0",
     "@types/mongoose": "^5.11.97",
     "@types/supertest": "^2.0.12",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.5.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb-memory-server": "^8.12.2",
     "mongoose": "^7.0.3",
-    "nodemon": "^2.0.22",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
+    "nodemon": "^2.0.22"
   }
 }
