adding linting to the project

--- a/.env.test
+++ b/.env.test
@@ -5,3 +5,4 @@ MONGO_ROOT_USERNAME=test_username
 MONGO_ROOT_PASSWORD=test_password
 MONGO_HOSTNAME=localhost
 MONGO_PORT=1738
+MONGO_URL="test string"
