--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "start:prod": "ts-node dist/server.js",
     "test": "ENV_FILE=./.env.test jest --coverage --runInBand --silent",
     "test:unit": "ENV_FILE=./.env.test jest --runInBand --silent",
-    "start:dev": "nodemon ./server.ts"
+    "start:dev": "nodemon ./server.ts",
+    "lint:fix": "eslint src --fix --cache"
   },
   "dependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/mongoose": "^5.11.97",
     "@types/supertest": "^2.0.12",
     "bcryptjs": "^2.4.3",
@@ -29,10 +31,19 @@
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.4"
+    "typescript": "*"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.1",
-    "nodemon": "^2.0.22"
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.7"
   }
 }
